--- a/public/manifest.json
+++ b/public/manifest.json
@@ -33,7 +33,7 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#F898B9",
+  "theme_color": "#222222",
   "background_color": "#ffffff",
   "display": "standalone"
 }
